--- a/views/ejsTemplates/user/products.ejs
+++ b/views/ejsTemplates/user/products.ejs
@@ -9,7 +9,7 @@
 <body>
     <%- include('../common/navbar.ejs') %>
     <main>
-        <h1>Our Products</h1>
+        <h1>Browse Inventory</h1>
         <div class="products-section">
             <% if (prods.length > 0) { %>
                 <div class="product-grid">
