--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,19 +7,23 @@ body {
 
 main {
     padding: 1rem;
-    background-color: #cfcfcf4d;
+    background-color: #161A1D;
     height: 100%;
 }
 
 h1 {
-    color: #001050;
+    color: #E56910;
     margin-left: 20px;
+}
+
+.header-specific {
+    color: #DCDFE4;
 }
 
 .main-header {
     width: 100%;
     height: 3.5rem;
-    background-color: #001050;
+    background-color: #C25100;
 }
 
 .main-header__nav {
@@ -43,12 +47,12 @@ h1 {
 
 .main-header__item a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: #F7F8F9;
     font-weight: 500;
 }
 
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
-    color: #ff0303;
+    color: #1D2125;
 }
