--- a/views/ejsTemplates/admin/admin-products.ejs
+++ b/views/ejsTemplates/admin/admin-products.ejs
@@ -9,7 +9,7 @@
 <body>
     <%- include('../common/navbar.ejs') %>
     <main>
-        <h1>Added Products</h1>
+        <h1 class="header"><span class="header-specific">Added</span> Inventory</h1>
         <div class="products-section">
             <% if (prods.length > 0) { %>
                 <div class="product-grid">
