--- a/public/css/product-card.css
+++ b/public/css/product-card.css
@@ -16,6 +16,10 @@
   box-shadow: 0 4px 8px #2C333A;
   background-color: #2C333A;
   color: #DCDFE4;
+  transition: transform 0.3s ease;
+}
+.card:hover {
+  transform: scale(1.07, 1.07);
 }
 .card-image {
   height: 200px;
