--- a/views/ejsTemplates/common/navbar.ejs
+++ b/views/ejsTemplates/common/navbar.ejs
@@ -2,11 +2,11 @@
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
             <li class="main-header__item"><a class="<%= active === 'home' ? 'active' : '' %>" href="/">Home</a></li>
-            <li class="main-header__item"><a class="<%= active === 'products' ? 'active' : '' %>" href="/products">Products</a></li>
+            <li class="main-header__item"><a class="<%= active === 'products' ? 'active' : '' %>" href="/products">Inventory</a></li>
             <li class="main-header__item"><a class="<%= active === 'cart' ? 'active' : '' %>" href="/cart">Cart</a></li>
             <li class="main-header__item"><a class="<%= active === 'orders' ? 'active' : '' %>" href="/orders">Orders</a></li>
             <li class="main-header__item"><a class="<%= active === 'add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product</a></li>
-            <li class="main-header__item"><a class="<%= active === 'admin-products' ? 'active' : '' %>" href="/admin/products">Admin Products</a></li>
+            <li class="main-header__item"><a class="<%= active === 'admin-products' ? 'active' : '' %>" href="/admin/products">Admin</a></li>
         </ul>
     </nav>
 </header>
