sequelize support added and relations defined between user and product

--- a/views/ejsTemplates/admin/admin-products.ejs
+++ b/views/ejsTemplates/admin/admin-products.ejs
@@ -37,7 +37,7 @@
                     <% } %>
                 </div>
             <% } else { %>
-                <p>No Products Available!</p>
+                <p style="color: white; margin-left: 20px;">No Products Available!</p>
             <% } %>
         </div>
     </main>
