checkout support added with sequelize, orders linked with products and user

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -38,8 +38,15 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
-.delete-button:hover {
+.checkout-button {
+  width: 120px;
+  padding: 7.5px;
   background-color: #E56910;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 .total-section {
   margin-top: 20px;
