--- a/views/ejsTemplates/user/cart.ejs
+++ b/views/ejsTemplates/user/cart.ejs
@@ -9,8 +9,8 @@
     <%- include('../common/navbar.ejs') %>
     <main>
       <div class="cart">
-        <% if (data.length > 0) { %> <% for (let i = 0; i <
-        data.length; i++) { %>
+        <% if (data.length > 0) { %> <% for (let i = 0; i < data.length; i++) {
+        %>
         <div class="product-card">
           <div class="product-image">
             <img src="<%= data[i].imageURL %>" alt="Product Image" />
@@ -18,30 +18,30 @@
           <div class="product-details">
             <div class="product-title"><%= data[i].title %></div>
             <div class="quantity">
-              <label for="quantity">Quantity: <%= data[i].cartItem.quantity %></label>
+              <label for="quantity"
+                >Quantity: <%= data[i].cartItem.quantity %></label
+              >
             </div>
-            <div style="display: flex; gap: 7.5px;">
+            <div style="display: flex; gap: 7.5px">
               <form action="/product/delete-cart-product" method="POST">
-                <input
-                  type="hidden"
-                  name="id"
-                  value="<%= data[i].id %>"
-                />
+                <input type="hidden" name="id" value="<%= data[i].id %>" />
                 <button type="submit" class="delete-button">-</button>
               </form>
               <form action="/product/add-to-cart" method="POST">
-                <input
-                  type="hidden"
-                  name="id"
-                  value="<%= data[i].id %>"
-                />
+                <input type="hidden" name="id" value="<%= data[i].id %>" />
                 <button type="submit" class="delete-button">+</button>
               </form>
             </div>
           </div>
         </div>
-        <% } %> <% } else { %>
-        <p style="color: white;">Cart is empty!</p>
+        <% } %>
+        <div style="text-align: center">
+          <form action="/create-order" method="POST">
+            <button type="submit" class="checkout-button">Checkout</button>
+          </form>
+        </div>
+        <% } else { %>
+        <p style="color: white">Cart is empty!</p>
         <% } %>
       </div>
     </main>
