--- a/views/ejsTemplates/user/product-detail.ejs
+++ b/views/ejsTemplates/user/product-detail.ejs
@@ -22,7 +22,7 @@
 
         <div style="display: flex; gap: 10px;">
           <form action="/product/add-to-cart" method="POST">
-            <input type="hidden" name="id" value="<%= prod.id %>" />
+            <input type="hidden" name="id" value="<%= prod._id %>" />
             <button type="submit" class="add-to-cart-button">Add to Cart</button>
           </form>
           <button class="back-to-products" onclick="window.history.back()">
