--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -4,7 +4,7 @@
   border-radius: 8px;
   margin: 20px auto;
   overflow: hidden;
-  background-color: #9FADBC;
+  background-color: #9fadbc;
   color: hsl(210, 12%, 13%);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -31,7 +31,7 @@
 .delete-button {
   width: 20px;
   height: 20px;
-  background-color: #E56910;
+  background-color: #e56910;
   color: white;
   border: none;
   border-radius: 4px;
@@ -41,18 +41,17 @@
 .checkout-button {
   width: 120px;
   padding: 7.5px;
-  background-color: #E56910;
-  color: white;
+  background-color: #9fadbc;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 .total-section {
-  margin-top: 20px;
+  width: 780px;
+  margin: 20px auto;
+  background-color: #c25100;
   padding: 10px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
   border-radius: 8px;
 }
 .total-text {
