--- a/public/css/product-detail.css
+++ b/public/css/product-detail.css
@@ -2,10 +2,10 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: rgb(255, 255, 255);
+  background-color: #2c333a;
+  color: #dcdfe4;
 }
 .product-title {
   font-size: 2rem;
@@ -28,14 +28,14 @@
 .product-price {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #ff0303;
+  color: #e56910;
   margin-bottom: 10px;
 }
 .add-to-cart-button {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #313854;
-  color: white;
+  background-color: #9fadbc;
+  color: #1d2125;
   text-decoration: none;
   border: none;
   border-radius: 4px;
@@ -43,13 +43,13 @@
   transition: background-color 0.3s ease;
 }
 .add-to-cart-button:hover {
-  background-color: #001050;
+  background-color: #738496;
 }
 .back-to-products {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #00796b;
-  color: white;
+  background-color: #c25100;
+  color: #f7f8f9;
   text-decoration: none;
   border: none;
   border-radius: 4px;
@@ -57,5 +57,5 @@
   transition: background-color 0.3s ease;
 }
 .back-to-products:hover {
-  background-color: #00504d;
+  background-color: #a54800;
 }
