--- a/views/add-product.html
+++ b/views/add-product.html
@@ -26,7 +26,7 @@
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
             </div>
-
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <button type="submit">Add Product</button>
         </form>
     </main>
