--- a/views/ejsTemplates/admin/add-product.ejs
+++ b/views/ejsTemplates/admin/add-product.ejs
@@ -29,6 +29,7 @@
             <% if (edit) { %>
                 <input type="hidden" name="id" value="<%= prod._id %>" />
             <% } %>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <button type="submit"><% if (edit) { %>Edit Product<% } else { %>Add Product<% } %></button>
         </form>
     </main>
