--- a/views/ejsTemplates/admin/admin-products.ejs
+++ b/views/ejsTemplates/admin/admin-products.ejs
@@ -26,10 +26,12 @@
                                 <div class="card-price">$<%= prods[i].price %></div>
                                 <form action="/admin/edit-product/<%= prods[i]._id %>" method="POST">
                                     <input type="hidden" name="id" value="<%= prods[i]._id %>" />
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                                     <button type="submit" class="edit-button">Edit Product</button>
                                 </form>
                                 <form action="/admin/delete-product" method="POST">
                                     <input type="hidden" name="id" value="<%= prods[i]._id %>" />
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                                     <button type="submit" class="delete-button">Delete</button>
                                 </form>
                             </div>
