--- a/views/ejsTemplates/user/cart.ejs
+++ b/views/ejsTemplates/user/cart.ejs
@@ -25,10 +25,12 @@
             <div style="display: flex; gap: 7.5px">
               <form action="/product/delete-cart-product" method="POST">
                 <input type="hidden" name="id" value="<%= data.products[i].productId._id %>" />
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                 <button type="submit" class="delete-button">-</button>
               </form>
               <form action="/product/add-to-cart" method="POST">
                 <input type="hidden" name="id" value="<%= data.products[i].productId._id %>" />
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                 <button type="submit" class="delete-button">+</button>
               </form>
             </div>
@@ -42,6 +44,7 @@
         </div>
         <div style="text-align: center">
           <form action="/create-order" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <button type="submit" class="checkout-button">Checkout</button>
           </form>
         </div>
